My Approach to test

--- a/apollo-rx2-support/build.gradle
+++ b/apollo-rx2-support/build.gradle
@@ -14,6 +14,8 @@ dependencies {
   testCompile dep.truth
   testCompile dep.mockWebServer
   testCompile dep.okhttpTestSupport
+  testCompile project(":apollo-runtime")
+  testCompile project(":apollo-api")
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
